feat: add role based authorization and admin dashboard